# rules_nushell

./: CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  source.template.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
nushell/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
nushell/private/: BUILD.bazel  env.tmpl.nu  genrule.bzl  repl.tmpl.nu  resolved_toolchain.bzl  toolchains_repo.bzl
nushell/tests/: versions_test.bzl
