load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "config.tmpl.nu",
    "env.tmpl.nu",
])

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//nushell:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//nushell:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//nushell:__subpackages__"],
)
